--- a/Notificaciones/app/build.gradle
+++ b/Notificaciones/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "pe.edu.cibertec.camera"
+        applicationId "pe.edu.cibertec.notificaciones"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -28,4 +28,5 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 }
